Add music functionality to webapp

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -12,16 +12,24 @@
 
 
   </head>
-  <body>
+  <body onload="initPlayer()">
     <div class="container h-100 d-flex justify-content-center">
-      <div class="jumbotron my-auto panel border">
-        <h2>Now Playing:</h2>
-        <p id="title"></p>
-        <button class="btn btn-primary" onclick="playHappy()">Play Happy</button>
-        <button class="btn btn-primary" onclick="playSad()">Play Sad</button>
-      </div>
+      <div class="jumbotron-fluid my-auto h-25 w-75 border">
+        <div class="container-fluid my-auto pt-4">
+          <h2 class="">Now Playing:</h2>
+          <div class="text-center">
+            <h2 id="title">N/A</h2>
+            <h3 id="artist">By: N/A</h3>
+          </div>
 
-      <audio src="" id="music" autoplay></audio>
+          <div class="text-center">
+            <button class="btn btn-primary" onclick="togglePlay()" id="playStatusBtn">Play</button>
+          </div>
+          <button hidden class="btn btn-primary" onclick="playHappy()">Play Happy</button>
+          <button hidden class="btn btn-primary" onclick="playSad()">Play Sad</button>
+        </div>
+      </div>
+      <audio src="" id="music"></audio>
     </div>
 
 
