--- a/webapp/index.html
+++ b/webapp/index.html
@@ -32,7 +32,8 @@
     </div>
     <div id="vid-controls">
       <video id="vid-show" autoplay></video>
-      <input id="vid-take" class="btn btn-primary" value="What's the Vibe?"/>
+      <button class="btn btn-primary" id="vid-take">What's The Vibe?</button>
+    <!--  <input id="vid-take" class="btn btn-primary" value="What's the Vibe?"/> -->
       <div id="vid-canvas"></div>
     </div>
 
