--- a/webapp/index.html
+++ b/webapp/index.html
@@ -4,19 +4,18 @@
     <meta charset="utf-8">
     <title>Vibe</title>
 
-    <!--Importing Bootstrap 4 and JQuery-->
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="./assets/favicon.png" type="image/x-icon">
     <script src="script.js"></script>
-
-
+    <link href="https://fonts.googleapis.com/css?family=Oxanium&display=swap" rel="stylesheet">
 
   </head>
   <body onload="initPlayer()" id="bg">
     <div class="container d-flex flex-column justify-content-center content">
-
+      <img src="" alt="">
       <div class="jumbotron-fluid mt-5 h-25 w-75 mx-auto border panel rounded-sm">
         <div class="container-fluid my-auto pt-3">
           <h2 class="pl-5">Now Playing:</h2>
@@ -27,10 +26,11 @@
           <div class="text-center pb-3">
             <button class="btn btn-outline-light" onclick="togglePlay()" id="playStatusBtn">Play</button>
           </div>
-          <!--
+
+          <!--Test Buttons-->
           <button class="btn btn-primary" onclick="playHappy()">Play Happy</button>
-        -->
           <button class="btn btn-primary" onclick="playSad()">Play Sad</button>
+          <button class="btn btn-primary" onclick="playAngry()">Play Angry </button>
 
         </div>
       </div>
