(hopefully) final push of webapp apperance. Added the logo.

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -14,11 +14,11 @@
 
   </head>
   <body onload="initPlayer()" id="bg">
-    <div class="container d-flex flex-column justify-content-center content">
-      <img src="" alt="">
-      <div class="jumbotron-fluid mt-5 h-25 w-75 mx-auto border panel rounded-sm">
+    <div class="container d-flex flex-column justify-content-center">
+      <img src="assets/croppedlogo.png" class="logo mx-auto pt-1 pb-1" alt="Logo">
+      <div class="jumbotron-fluid h-25 w-75 mx-auto border panel rounded-sm">
         <div class="container-fluid my-auto pt-3">
-          <h2 class="pl-5">Now Playing:</h2>
+          <h2 class="pl-3 pt-1">Now Playing:</h2>
           <div class="text-center">
             <h2 id="title">N/A</h2>
             <h3 id="artist">By: N/A</h3>
