Attempting to fix front page for firebase

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -39,6 +39,7 @@
         <video class="mx-auto" id="vid-show" autoplay></video>
         <input id="vid-take" class="btn btn-primary" value="What's the Vibe?"/>
         <div class="pt-2" id="vid-canvas"></div>
+        <input id="snap" class="btn btn-primary" value="Download"/>
       </div>
 
       <audio src="" id="music"></audio>
