added upload photo

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -42,7 +42,7 @@
 
       <div class="jumbotron-fluid mt-3 pt-3 pb-3 mb-4 mx-auto w-75 text-center border panel rounded-sm justify-content-center" id="vid-controls">
         <video class="mx-auto" id="vid-show" autoplay></video>
-        <input id="vid-take" class="btn btn-primary" value="Take a Photo"/>
+        <input id="dl-btn" href="#" class="btn btn-primary" download="my-selfie.png" value="Take a Photo"/>
         <input id='browse' type='file' style='width:0px'>
         <button id='browser' onclick='browse.click()'>
             What's the vibe?
