--- a/webapp/index.html
+++ b/webapp/index.html
@@ -14,7 +14,7 @@
 
 
     <script src="https://www.gstatic.com/firebasejs/7.5.2/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/7.5.2/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.5.2/firebase-database.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.5.2/firebase-storage.js"></script>
 
   </head>
