--- a/webapp/index.html
+++ b/webapp/index.html
@@ -29,22 +29,25 @@
             <h3 id="artist">By: N/A</h3>
           </div>
           <div class="text-center pb-3">
-            <button class="btn btn-outline-light" onclick="togglePlay()" id="playStatusBtn">Play</button>
+            <button class="btn btn-outline-dark" onclick="togglePlay()" id="playStatusBtn">Play</button>
           </div>
 
           <!--Test Buttons-->
-          <button class="btn btn-primary" onclick="playHappy()">Play Happy</button>
-          <button class="btn btn-primary" onclick="playSad()">Play Sad</button>
-          <button class="btn btn-primary" onclick="playAngry()">Play Angry </button>
+          <div class="text-center pb-3">
+            <button class="btn btn-outline-dark" onclick="playHappy()">Play Happy</button>
+            <button class="btn btn-outline-dark" onclick="playSad()">Play Sad</button>
+            <button class="btn btn-outline-dark" onclick="playAngry()">Play Angry </button>
+          </div>
 
         </div>
       </div>
 
       <div class="jumbotron-fluid mt-3 pt-3 pb-3 mb-4 mx-auto w-75 text-center border panel rounded-sm justify-content-center" id="vid-controls">
         <video class="mx-auto" id="vid-show" autoplay></video>
-        <input id="dl-btn" href="#" class="btn btn-primary" hidden style="display: none;" download="my-selfie.png" value="Take a Photo"/>
+        <br>
+        <input id="dl-btn" href="#" class="btn btn-primary" style="display: none;" download="my-selfie.png" value="Take a Photo"/>
 
-        <button id='vibeBtn' onclick='saveImg();' class="btn btn-primary">What's the vibe?</button>
+        <button id='vibeBtn' onclick='saveImg();' class="btn btn-primary mt-2">What's the Vibe?</button>
         <div class="pt-2" id="vid-canvas" style="display: none;"></div>
         <canvas id="pic" style="display: none;"></canvas>
 
